force-app/main/default/objects/Chat_365_Log_Detail__c.object
<CustomObject>
    <description>Detailed log of conversation happened during a session of a chat log.</description>
    <fields>
        <fullName>Chat_365_Log__c</fullName>
        <description>Chat Log Parent Record</description>
        <label>Chat 365 Log</label>
        <referenceTo>Chat_365_Log__c</referenceTo>
        <relationshipLabel>Chat 365 Log Details</relationshipLabel>
        <relationshipName>Chat_365_Log_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Case Description</description>
        <label>Description</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intent_Name__c</fullName>
        <description>Intent Name</description>
        <label>Intent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intent__c</fullName>
        <description>1 - Submit Enquiry
2 - Interaction
3 - Submit Feedback
4 - Request Chat - Agent Online
5 - Request Chat - Agent Offline</description>
        <label>Intent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Request - User input</description>
        <label>Request</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Chatbot response to user</description>
        <label>Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Student_Letter_Session_Id__c</fullName>
        <description>Stores student letter&apos;s session Id (uuidv4-letterCode-unixTime-retryCount)</description>
        <externalId>true</externalId>
        <label>Student Letter Session Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Case Subject</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Topic - Maps to Case category level 1</description>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chat 365 Log Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chat_365_Log__c</columns>
        <columns>Intent__c</columns>
        <columns>Topic__c</columns>
        <columns>Intent_Name__c</columns>
        <columns>Request__c</columns>
        <columns>Response__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLD-{00000000}</displayFormat>
        <label>Chat 365 Log Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat 365 Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>